<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".UpdateCard">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_title"
        android:textColor="@color/purple"
        android:textSize="30sp"
        android:layout_gravity="right|top"
        android:fontFamily="@font/poppins"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded"
        />

    <EditText
        android:id="@+id/create_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_hint"
        android:layout_marginTop="16dp"
        android:padding="15dp"
        android:background="@drawable/border"
        android:textColorHint="#BFBBBB"
        android:textColor="@color/black"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/create_priority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/pr_hint"
        android:padding="15dp"
        android:background="@drawable/border"
        android:textColorHint="#BFBBBB"
        android:textColor="@color/black"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/create_deadline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/deadLine_hint"
        android:padding="15dp"
        android:background="@drawable/border"
        android:textColorHint="#BFBBBB"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:inputType="date"/>

    <EditText
        android:id="@+id/create_description"
        android:layout_width="match_parent"
        android:layout_height="340dp"
        android:layout_marginTop="16dp"
        android:hint="@string/description_hint"
        android:padding="15dp"
        android:background="@drawable/border"
        android:textColorHint="#BFBBBB"
        android:textColor="@color/black"
        android:gravity="top|start"
        android:textSize="18sp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <Button
            android:id="@+id/update_button"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/update"
            android:fontFamily="@font/poppins"
            android:textStyle="bold"
            android:textSize="20sp"
            android:backgroundTint="#8BC34A"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:backgroundTint="#F45C48"
            android:text="@string/delete"
            android:fontFamily="@font/poppins"
            android:textStyle="bold"
            android:textSize="20sp"/>
    </LinearLayout>

</LinearLayout>